5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1613_1446.log
== TEST (2019-05-29 18:30:01) 
-- CODE:
ql=float(input("quantos litros"))
r=2/3*ql
print(r)
print(roun(ql, 3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(roun(ql, 3))
NameError: name 'roun' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:08) 
-- CODE:
ql=float(input("quantos litros"))
r=2/3*ql
print(r)
print(round(ql, 3))


-- OUTPUT:
4.666666666666666
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:14) 
-- CODE:
ql=float(input("quantos litros"))
r=1/3*ql
print(round(r, 3))


-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:18) 
-- CODE:
ql=float(input("quantos litros"))
r=1/3*ql
print(round(r, 3))


-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:31:26) 
-- CODE:
ql=float(input("quantos litros"))
r=1/3*ql
print(round(r, 3))


-- EXECUTION TIME:
0.218182
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
